--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -10,7 +10,7 @@
 }
 
 .wrapperForm{
-    width: 400px;
+    min-width: 400px;
     min-height: 200px;
     border: 3px solid rgb(80, 200, 230);
     color: rgb(80, 200, 230);
