Delete genus is done

--- a/src/app/components/web/child/child-id/child-id.component.html
+++ b/src/app/components/web/child/child-id/child-id.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="child$ | async as child" class="main p-3">
-    <a routerLink="/children"><button class="back">Back</button></a>
+    <a routerLink="/children"><button class="button">Back</button></a>
     <div>   
         <div class="from_all_details">
             <p class="text">{{child.user.firstName}} {{child.genus.name}}</p>
