--- a/src/app/components/web/parent/parent-id/parent-id.component.html
+++ b/src/app/components/web/parent/parent-id/parent-id.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="parent$ | async as parent" class="main p-3">
-    <a routerLink="/parents"><button class="back">Back</button></a>
+    <a routerLink="/parents"><button class="button">Back</button></a>
     <div>   
         <div class="from_all_details">
             <p class="text">{{parent.user.firstName}} {{parent.genus.name}}</p>
