--- a/src/app/components/web/genus/genus-id/genus-id.component.scss
+++ b/src/app/components/web/genus/genus-id/genus-id.component.scss
@@ -47,11 +47,12 @@
     color: rgb(80, 200, 230);
 }
 
-.back{
-    width: 100px;
+.button {
+    min-width: 100px;
     height: 50px;
     color: rgb(80, 200, 230);
     background: none;
     border: 3px solid rgb(80, 200, 230);
     border-radius: 15px;
+    margin-right: 20px;
 }
