Bug with view was fixed

--- a/src/app/components/web/genus/genus-id/genus-id.component.html
+++ b/src/app/components/web/genus/genus-id/genus-id.component.html
@@ -1,7 +1,11 @@
 <div *ngIf="genus$ | async as genus" class="main p-3">
-    <a routerLink="/genus"><button class="button">Back</button></a>
-    <a [routerLink]="['/genus', genus.id, 'update']"><button class="button">Update</button></a>
-    <button class="button" (click)="deleteGenus(genus.id)">Delete</button>
+    <span *ngIf="user$ | async as user">
+        <a routerLink="/genus"><button class="button">Back</button></a>
+        <span *ngIf="hasAdminPermission || hasGodPermission || user.parent.genusId == genus.id">
+            <a [routerLink]="['/genus', genus.id, 'update']"><button class="button">Update</button></a>
+            <button class="button" (click)="deleteGenus(genus.id)">Delete</button>
+        </span>
+    </span>    
     <div>   
         <div class="from_all_details">
             <span>{{genus.name}}</span>
