--- a/src/app/pages/web/genus/genus-id-page/genus-id-page.component.html
+++ b/src/app/pages/web/genus/genus-id-page/genus-id-page.component.html
@@ -4,4 +4,7 @@
     [adminPermission]="[permission.deleteUser]" 
     [godPermission]="[permission.userToAdmin, permission.adminToUser]">
 </app-main-header>
-<app-genus-id></app-genus-id>
+<app-genus-id 
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-genus-id>
