--- a/src/app/components/web/genus/genus-add/genus-add.component.scss
+++ b/src/app/components/web/genus/genus-add/genus-add.component.scss
@@ -45,6 +45,11 @@
     color: rgb(80, 200, 230);
 }
 
+.smile{
+    margin-left: 5px;
+    font-weight: bold;
+}
+
 .smile:hover{
     cursor: pointer;
 }
